RESOLVED FIXED192873
[PSON] SuspendedPageProxy fails to release its process assertion if the WebPage fails to enter PageCache
https://bugs.webkit.org/show_bug.cgi?id=192873
Summary [PSON] SuspendedPageProxy fails to release its process assertion if the WebPa...
Chris Dumez
Reported 2018-12-19 13:25:07 PST
SuspendedPageProxy fails to release its process assertion if the WebPage fails to enter PageCache, preventing the process from suspending on iOS.
Attachments
Patch (3.67 KB, patch)
2018-12-19 13:26 PST, Chris Dumez
no flags
Patch (3.67 KB, patch)
2018-12-19 13:31 PST, Chris Dumez
no flags
Patch (4.12 KB, patch)
2018-12-19 13:45 PST, Chris Dumez
no flags
Chris Dumez
Comment 1 2018-12-19 13:26:35 PST
Chris Dumez
Comment 2 2018-12-19 13:31:58 PST
Chris Dumez
Comment 3 2018-12-19 13:45:30 PST
WebKit Commit Bot
Comment 4 2018-12-20 01:12:35 PST
Comment on attachment 357715 [details] Patch Clearing flags on attachment: 357715 Committed r239437: <https://trac.webkit.org/changeset/239437>
WebKit Commit Bot
Comment 5 2018-12-20 01:12:37 PST
All reviewed patches have been landed. Closing bug.
Radar WebKit Bug Importer
Comment 6 2018-12-20 01:13:43 PST
Note You need to log in before you can comment on or make changes to this bug.