[PSON] SuspendedPageProxy fails to release its process assertion if the WebPage fails to enter PageCache https://bugs.webkit.org/show_bug.cgi?id=192873

Reviewed by Antti Koivisto.

SuspendedPageProxy fails to release its process assertion if the WebPage fails to enter PageCache, preventing
the process from suspending on iOS.

* UIProcess/SuspendedPageProxy.cpp:
(WebKit::SuspendedPageProxy::didProcessRequestToSuspend):
(WebKit::SuspendedPageProxy::didReceiveMessage):
(WebKit::SuspendedPageProxy::didSuspend): Deleted.
(WebKit::SuspendedPageProxy::didFailToSuspend): Deleted.
* UIProcess/SuspendedPageProxy.h:


Canonical link: https://commits.webkit.org/207478@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@239437 268f45cc-cd09-0410-ab3c-d52691b4dbfc